[NM] Use placeholders for u-h* mixins

--- a/context/brand-context/default/scss/10-settings/typography.scss
+++ b/context/brand-context/default/scss/10-settings/typography.scss
@@ -24,6 +24,7 @@ $context--font-size-h1: 3.2rem;
 $context--font-size-h2: 2.4rem;
 $context--font-size-h3: 2rem;
 $context--font-size-h4: 1.8rem;
+$context--font-size-h5: 1.6rem;
 
 $context--line-height-base: 1.61803398875; // golden ratio
 $context--line-height-tight: 1.4;
