--- a/context/brand-context/springernature/scss/30-mixins/typography.scss
+++ b/context/brand-context/springernature/scss/30-mixins/typography.scss
@@ -1,6 +1,6 @@
 // Headings
 
-@mixin u-h1() {
+%u-h1 {
 	font-weight: $context--font-weight-light;
 	font-size: $context--font-size-h1;
 	font-size: unquote('min(max(#{$context--font-size-h1-min}, 4vw), #{$context--font-size-h1})');
@@ -9,7 +9,7 @@
 	line-height: unquote('min(max(#{$context--line-height-h1-min}, 4vw), #{$context--line-height-h1})');
 }
 
-@mixin u-h2() {
+%u-h2 {
 	font-weight: $context--font-weight-normal;
 	font-size: unquote('min(max(#{$context--font-size-h2-min}, 4vw), #{$context--font-size-h2})');
 	margin-bottom: spacing(16);
@@ -17,7 +17,7 @@
 	line-height: unquote('min(max(#{$context--line-height-h2-min}, 4vw), #{$context--line-height-h2})');
 }
 
-@mixin u-h3() {
+%u-h3 {
 	font-weight: $context--font-weight-bold;
 	font-size: unquote('min(max(#{$context--font-size-h3-min}, 4vw), #{$context--font-size-h3})');
 	margin-bottom: spacing(16);
@@ -25,7 +25,7 @@
 	line-height: unquote('min(max(#{$context--line-height-h3-min}, 4vw), #{$context--line-height-h3})');
 }
 
-@mixin u-h4() {
+%u-h4 {
 	font-weight: $context--font-weight-bold;
 	font-size: unquote('min(max(#{$context--font-size-h4-min}, 4vw), #{$context--font-size-h4})');
 	margin-bottom: spacing(16);
@@ -33,7 +33,7 @@
 	line-height: unquote('min(max(#{$context--line-height-h4-min}, 4vw), #{$context--line-height-h4})');
 }
 
-@mixin u-h5() {
+%u-h5 {
 	font-weight: $context--font-weight-bold;
 	font-size: unquote('min(max(#{$context--font-size-h5-min}, 4vw), #{$context--font-size-h5})');
 	margin-bottom: spacing(16);
