--- a/context/brand-context/nature/scss/30-mixins/typography.scss
+++ b/context/brand-context/nature/scss/30-mixins/typography.scss
@@ -13,28 +13,28 @@
 	}
 }
 
-@mixin u-h1() {
+%u-h1 {
 	@include _heading-base();
 	font-size: $context--font-size-h1;
 	margin-bottom: spacing(24);
 	font-family: $context--font-family-primary;
 }
 
-@mixin u-h2() {
+%u-h2 {
 	@include _heading-base();
 	font-size: $context--font-size-h2;
 	margin-bottom: spacing(8);
 	font-family: $context--font-family-primary;
 }
 
-@mixin u-h3() {
+%u-h3 {
 	@include _heading-base();
 	font-size: $context--font-size-h3;
 	margin-bottom: spacing(8);
 	font-family: $context--font-family-primary;
 }
 
-@mixin u-h4() {
+%u-h4 {
 	@include _heading-base();
 	font-size: $context--font-size-h4;
 	margin-bottom: spacing(8);
