--- a/context/brand-context/springer/scss/30-mixins/typography.scss
+++ b/context/brand-context/springer/scss/30-mixins/typography.scss
@@ -28,7 +28,7 @@
 	}
 }
 
-@mixin u-h1 {
+%u-h1 {
 	@include heading-base;
 	font-size: $context--font-size-h1;
 	font-size: unquote('min(max(#{$context--font-size-h1-min}, 4vw), #{$context--font-size-h1})');
@@ -36,7 +36,7 @@
 	font-weight: $context--font-weight-normal;
 }
 
-@mixin u-h2 {
+%u-h2 {
 	@include heading-base;
 	font-size: $context--font-size-h2;
 	font-size: unquote('min(max(#{$context--font-size-h2-min}, 3.5vw), #{$context--font-size-h2})');
@@ -44,7 +44,7 @@
 	font-weight: $context--font-weight-normal;
 }
 
-@mixin u-h3 {
+%u-h3 {
 	@include heading-base;
 	font-size: $context--font-size-h3;
 	font-size: unquote('min(max(#{$context--font-size-h3-min}, 3vw), #{$context--font-size-h3})');
@@ -52,7 +52,7 @@
 	font-weight: $context--font-weight-normal;
 }
 
-@mixin u-h4 {
+%u-h4 {
 	@include heading-base;
 	font-size: $context--font-size-h4;
 	font-size: unquote('min(max(#{$context--font-size-h4-min}, 2.5vw), #{$context--font-size-h4})');
