[NM] New heading mixin for card title
 - Add new card--title-heading parameter
 - Use the new u-heading mixin with the parameter as argument
 - Add a default and SN value for the parameter
 - Adjust to the new brand-context

--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -12,6 +12,7 @@ $card--padding-x: 24px 0;
 $card--background: transparent;
 $card--title-spacing: $card--spacing;
 $card--title-font-weight: null;
+$card--title-heading: h3;
 
 // --major
 $card--major-font-size: 1.6rem;
