--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -37,6 +37,7 @@
 		font-weight: $card--title-font-weight;
 	}
 	margin-bottom: $card--spacing;
+	letter-spacing: $card--title-letter-spacing;
 }
 
 .c-card__summary {
