--- a/toolkits/global/packages/global-card/scss/10-settings/springernature.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/springernature.scss
@@ -9,3 +9,4 @@
 // Springer Nature overrides
 $card--title-font-weight: $context--font-weight-normal;
 $card--title-heading: h4;
+$card--title-letter-spacing: 0.2em;
