[NM] New heading mixin for card title (#471)
 - Add new card--title-heading parameter
 - Use the new u-heading mixin with the parameter as argument
 - Add a default and SN value for the parameter
 - Adjust to the new brand-context
 - Add letter-spacing to card title

--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -32,11 +32,12 @@
 }
 
 .c-card__title {
-	@include u-h3;
+	@include u-heading($card--title-heading);
 	@if $card--title-font-weight != null {
 		font-weight: $card--title-font-weight;
 	}
 	margin-bottom: $card--spacing;
+	letter-spacing: $card--title-letter-spacing;
 }
 
 .c-card__summary {
