--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -12,6 +12,8 @@ $card--padding-x: 24px 0;
 $card--background: transparent;
 $card--title-spacing: $card--spacing;
 $card--title-font-weight: null;
+$card--title-heading: h3;
+$card--title-letter-spacing: normal;
 
 // --major
 $card--major-font-size: 1.6rem;
