add default font sizes

--- a/context/brand-context/default/scss/10-settings/typography.scss
+++ b/context/brand-context/default/scss/10-settings/typography.scss
@@ -19,6 +19,10 @@ $context--font-size-base: 1.8em;
 
 $context--font-size-interface: 16px;
 
+$context--font-size-sm: 16px;
+$context--font-size-md: 18px;
+$context--font-size-lg: 24px;
+
 // Headings
 $context--font-size-h1: 3.2rem;
 $context--font-size-h2: 2.4rem;
