--- a/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
+++ b/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
@@ -26,12 +26,9 @@
 }
 
 .c-status-message__icon {
+	@include u-icon;
 	flex: 0 0 auto;
 	margin-right: $status-message--gutter-icon;
-	fill: currentColor;
-	transform: translate(0, 0); // Hack to allow for subpixel rendering
-	display: inline-block;
-	vertical-align: text-top;
 }
 
 .c-status-message__icon--top {
