--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -118,8 +118,11 @@
 	padding: spacing(8);
 	display: flex;
 	align-items: center;
-	text-transform: capitalize;
 	white-space: nowrap;
+
+	::first-letter {
+		text-transform: capitalize;
+	}
 
 	> svg {
 		margin-left: spacing(2);
