--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -11,8 +11,8 @@ $card--padding: $card--gutter;
 $card--padding-x: 24px 0;
 $card--background: transparent;
 $card--title-spacing: $card--spacing;
-$card--title-font-weight: null;
-$card--title-heading: h3;
+$card--title-font-weight: $context--font-weight-normal;
+$card--title-heading: h4;
 $card--title-letter-spacing: normal;
 
 // --major
