--- a/toolkits/global/packages/global-card/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/nature.scss
@@ -10,3 +10,5 @@
 $card--padding-x: 0;
 $card--dark-background: #29303c;
 $card--dark-color: #e3e4e5;
+$card--title-font-weight: null;
+$card--title-heading: h3;
