Update popup to use font family variable value

--- a/toolkits/global/packages/global-popup/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-popup/scss/10-settings/_default.scss
@@ -3,6 +3,7 @@
  * Default branding for component
  */
 
+$popup--font-family: $context--font-family-serif;
 $popup--padding: spacing(16, 32, 16, 24);
 $popup--close-top: spacing(16);
 $popup--close-right: spacing(16);
