--- a/context/brand-context/nature/scss/30-mixins/typography.scss
+++ b/context/brand-context/nature/scss/30-mixins/typography.scss
@@ -7,7 +7,6 @@
 
 @mixin _heading-base() {
 	font-weight: $context--font-weight-heading;
-	line-height: $context--line-height-heading;
 	@if $is-nature-branded {
 		@include u-font-smoothing();
 	}
@@ -16,6 +15,9 @@
 %u-h1 {
 	@include _heading-base();
 	font-size: $context--font-size-h1;
+	font-size: unquote('min(max(#{$context--font-size-h1-min}, 4vw), #{$context--font-size-h1})');
+	letter-spacing: unquote('min(max(#{$context--letter-spacing-min}, 4vw), #{$context--letter-spacing})');
+	line-height: unquote('min(max(#{$context--line-height-h1-min}, 4vw), #{$context--line-height-h1})');
 	margin-bottom: spacing(24);
 	font-family: $context--font-family-primary;
 }
@@ -23,6 +25,9 @@
 %u-h2 {
 	@include _heading-base();
 	font-size: $context--font-size-h2;
+	font-size: unquote('min(max(#{$context--font-size-h2-min}, 3.5vw), #{$context--font-size-h2})');
+	letter-spacing: $context--letter-spacing-min;
+	line-height: unquote('min(max(#{$context--line-height-h2-min}, 3.5vw), #{$context--line-height-h2})');
 	margin-bottom: spacing(8);
 	font-family: $context--font-family-primary;
 }
@@ -30,6 +35,9 @@
 %u-h3 {
 	@include _heading-base();
 	font-size: $context--font-size-h3;
+	font-size: unquote('min(max(#{$context--font-size-h3-min}, 3.0vw), #{$context--font-size-h3})');
+	letter-spacing: $context--letter-spacing-min;
+	line-height: $context--line-height-h3;
 	margin-bottom: spacing(8);
 	font-family: $context--font-family-primary;
 }
@@ -37,6 +45,9 @@
 %u-h4 {
 	@include _heading-base();
 	font-size: $context--font-size-h4;
+	font-size: unquote('min(max(#{$context--font-size-h4-min}, 2.5vw), #{$context--font-size-h4})');
+	letter-spacing: $context--letter-spacing-min;
+	line-height: $context--line-height-h4;
 	margin-bottom: spacing(8);
 	font-family: $context--font-family-secondary;
 }
