Replace static font-size value with u-heading mixin on .c-card--major .c-card__title

--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -71,7 +71,7 @@
 	font-size: $card--major-font-size;
 
 	.c-card__title {
-		font-size: $card--major-title-font-size;
+		@include u-heading($card--major-title-heading);
 	}
 }
 
