Replace static font-size value with u-heading mixin on .c-card--major .c-card__title

--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -17,7 +17,7 @@ $card--title-letter-spacing: normal;
 
 // --major
 $card--major-font-size: 1.6rem;
-$card--major-title-font-size: 2.4rem;
+$card--major-title-heading: h2;
 
 // --dark
 $card--dark-background: slategrey;
