override letter spacing on nature
- default setting was set to normal

--- a/toolkits/global/packages/global-card/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/nature.scss
@@ -12,3 +12,4 @@ $card--dark-background: #29303c;
 $card--dark-color: #e3e4e5;
 $card--title-font-weight: null;
 $card--title-heading: h3;
+$card--title-letter-spacing: -0.01875rem;
