Adds word break styling to card title to fix issue on mobile where long words broke the layout

--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -38,6 +38,10 @@
 	}
 	margin-bottom: $card--spacing;
 	letter-spacing: $card--title-letter-spacing;
+
+	@include media-query('sm', 'max') {
+		word-break: break-word;
+	}
 }
 
 .c-card__summary {
