Use new branding URL

--- a/toolkits/springernature/packages/springernature-header/view/header.hbs
+++ b/toolkits/springernature/packages/springernature-header/view/header.hbs
@@ -6,7 +6,7 @@
                 {{#if showJournalLogo}}
                     <span class="c-header__journal-title hide" data-component-journal-title>{{submission.journalName}}</span>
                     {{#if submission.journalId}}
-                        <img alt="{{submission.journalName}}" height="45" src="//ca-branding.live.public.springernature.io/journals/{{submission.journalId}}/logo.svg" class="c-header__journal-logo" 
+                        <img alt="{{submission.journalName}}" height="45" src="//ca-branding-live.public.springernature.app/journals/{{submission.journalId}}/logo.svg" class="c-header__journal-logo" 
                         data-component-journal-logo onerror="this.classList.add('hide');document.querySelector('[data-component-journal-title]').classList.remove('hide');">
                     {{/if}}
                 {{/if}}
