--- a/toolkits/nature/packages/nature-sort-by/scss/50-components/sort-by.scss
+++ b/toolkits/nature/packages/nature-sort-by/scss/50-components/sort-by.scss
@@ -34,6 +34,11 @@
 
 .c-sort-by__list-item {
 	padding: spacing(8) spacing(16);
+	cursor: pointer;
+
+	& > label {
+		cursor: pointer;
+	}
 }
 
 /**
