Adds chevron animation on menu open/close

--- a/toolkits/nature/packages/nature-sort-by/scss/50-components/sort-by.scss
+++ b/toolkits/nature/packages/nature-sort-by/scss/50-components/sort-by.scss
@@ -23,6 +23,11 @@
 
 	> svg {
 		margin-left: $sort-by--button-svg-margin;
+		transition-duration: .2s;
+	}
+
+	&.is-open > svg {
+		transform: rotate(180deg);
 	}
 }
 
