--- a/toolkits/springernature/packages/springernature-forms/demo/main.scss
+++ b/toolkits/springernature/packages/springernature-forms/demo/main.scss
@@ -14,3 +14,4 @@
 @import '../scss/50-components/errors';
 
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/icons';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/buttons';
