--- a/toolkits/springernature/packages/springernature-forms/demo/main.scss
+++ b/toolkits/springernature/packages/springernature-forms/demo/main.scss
@@ -15,3 +15,4 @@
 
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/icons';
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/buttons';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/hiding';
