--- a/toolkits/springernature/packages/springernature-forms/scss/50-components/_forms.scss
+++ b/toolkits/springernature/packages/springernature-forms/scss/50-components/_forms.scss
@@ -1,3 +1,14 @@
+@mixin forms--input {
+	display: block;
+	width: 100%;
+	line-height: 1.4;
+	margin-bottom: $forms--input-margin-bottom;
+	font-family: $context--font-family-sans;
+	padding: $forms--input-padding;
+	border: $forms--input-border;
+	border-radius: $forms--input-border-radius;
+}
+
 .c-form__section {
 	margin-bottom: $forms--section-margin-bottom;
 }
