Include default styling on nature

--- a/toolkits/global/packages/global-skip-link/scss/10-settings/_nature.scss
+++ b/toolkits/global/packages/global-skip-link/scss/10-settings/_nature.scss
@@ -4,6 +4,9 @@
  *
  */
 
+ // Default setting
+@import 'default';
+
 $skip-link--font-size: 1.4rem;
 $skip-link--color: white;
 $skip-link--hover-color: white;
