--- a/toolkits/springernature/packages/springernature-forms/demo/index.hbs
+++ b/toolkits/springernature/packages/springernature-forms/demo/index.hbs
@@ -126,9 +126,9 @@
 
 <div class="u-mb-48">
 	<h2 class="u-mb-24" id="error-summary">Error summary</h2>
-	<div class="c-error-summary" role="group" id="errorSummary" aria-labelledby="errorSummaryHeading" tabindex="-1" data-component="error-summary">
-		<h3 class="c-error-summary__heading" id="errorSummaryHeading">Sorry, we couldn't submit the form</h3>
-		<ul data-test="specific-errors-list" class="c-error-summary__specific-list">
+	<div class="c-forms__error-summary" role="group" id="errorSummary" aria-labelledby="errorSummaryHeading" tabindex="-1" data-component="error-summary">
+		<h3 class="c-forms__error-summary__heading" id="errorSummaryHeading">Sorry, we couldn't submit the form</h3>
+		<ul data-test="specific-errors-list" class="c-forms__error-summary__specific-list">
 			<li><a href="#lastName">Enter your last name</a></li>
 			<li><a href="#password">Enter your password</a></li>
 		</ul>
