[MC] Fix c-error-summary BEM issues

--- a/toolkits/springernature/packages/springernature-forms/scss/50-components/_forms.scss
+++ b/toolkits/springernature/packages/springernature-forms/scss/50-components/_forms.scss
@@ -78,6 +78,7 @@
 
 .c-forms__select {
 	@include forms--input;
+	display: inline;
 	padding: 0;
 	position: relative;
 
@@ -107,7 +108,6 @@
 	}
 }
 
-.c-forms__select
 .c-forms__label-text--inline {
 	display: inline;
 }
