[MC] Add background to select + fix inline issue

--- a/toolkits/springernature/packages/springernature-forms/scss/50-components/_forms.scss
+++ b/toolkits/springernature/packages/springernature-forms/scss/50-components/_forms.scss
@@ -78,9 +78,9 @@
 
 .c-forms__select {
 	@include forms--input;
-	display: inline;
 	padding: 0;
 	position: relative;
+	background-color: $forms--select-background-color;
 
 	&:after {
 		content: '';
