--- a/toolkits/springernature/packages/springernature-forms/demo/index.hbs
+++ b/toolkits/springernature/packages/springernature-forms/demo/index.hbs
@@ -85,7 +85,7 @@
 	<h2 class="u-mb-24" id="radio-buttons">Radio buttons</h2>
 	<div class="c-forms__field">
 		<fieldset>
-			<legend class="c-forms__label-text">
+			<legend>
 				<span>Do you already have an account?</span>
 			</legend>
 			<div class="c-forms__radio">
@@ -95,6 +95,43 @@
 			<div class="c-forms__radio">
 				<input type="radio" name="have-account" value="mrs" id="have-acount-no">
 				<label for="have-account-no">No</label>
+			</div>
+		</fieldset>
+	</div>
+
+	<h3 class="u-mb-24" id="radio-buttons-with-form-indent">Radio buttons with Form indent</h3>
+	<div class="c-forms__field">
+		<fieldset>
+			<legend>
+				<div class="u-margin-bottom-small">How should we contact you ?</div>
+			</legend>
+			<div class="c-forms__field c-forms__radio">
+				<input type="radio" name="contactViaToggle" id="contactViaToggleEmail" checked="">
+				<label for="contactViaToggleEmail">
+					<span class="c-forms__label-text">Via email</span>
+				</label>
+			</div>
+			<div class="c-forms__indent">
+				<div class="c-forms__field">
+					<label for="contactViaEmail">
+						<span>Email address</span>
+					</label>
+					<input type="email" name="contactViaEmail" id="contactViaEmail" size="60" value="">
+				</div>
+			</div>
+			<div class="c-forms__field c-forms__radio">
+				<input type="radio" name="contactViaToggle" id="contactViaToggleText">
+				<label for="contactViaToggleText">
+					<span class="c-forms__label-text">Via text message</span>
+				</label>
+			</div>
+			<div class="c-forms__indent">
+				<div class="c-forms__field">
+					<label for="contactViaText">
+						<span class="c-forms__label-text">Mobile phone number</span>
+					</label>
+					<input type="text" name="contactViaText" id="contactViaText" size="30" value="">
+				</div>
 			</div>
 		</fieldset>
 	</div>
