add default to nature brand
- override margin values

--- a/toolkits/global/packages/global-pill/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-pill/scss/10-settings/nature.scss
@@ -1,2 +1,12 @@
+/**
+ * @springernature/global-pill
+ * Nature skin settings
+ */
+
+// Default setting
+@import 'default';
+
 $pill--background-color: color('light-blue');
 $pill--color: color('action-base');
+$pill--margin-right: spacing(4);
+$pill--margin-bottom: spacing(8);
