Updates c-meta content to block at lg instead of xl

--- a/toolkits/global/packages/global-meta/scss/50-components/_meta.scss
+++ b/toolkits/global/packages/global-meta/scss/50-components/_meta.scss
@@ -17,8 +17,8 @@
 	}
 }
 
-.c-meta__item--block-at-xl {
-	@include media-query('xl') {
+.c-meta__item--block-at-lg {
+	@include media-query('lg') {
 		display: block;
 
 		&:not(:last-child) {
