new names for the colors

--- a/context/brand-context/springernature/scss/10-settings/colors/default.scss
+++ b/context/brand-context/springernature/scss/10-settings/colors/default.scss
@@ -12,8 +12,8 @@ $context--colors: (
 	'yellow': #fc0,
 	'blue': #004b83,
 	'blue-light': #0063ab,
-	'cyan-blue-light': #0070A8,
-	'cyan-blue-dark': #01324B,
+	'research-blue': #0070A8,
+	'universal-blue': #01324B,
 	'purple': #a345c9,
 	'grey-dark1': #555,	// Formely emperor
 	'grey-dark2': #666,	// Formely dove
