delete old colors & replace purple

--- a/context/brand-context/springernature/scss/10-settings/colors/default.scss
+++ b/context/brand-context/springernature/scss/10-settings/colors/default.scss
@@ -12,8 +12,6 @@ $context--colors: (
 	'yellow': #fc0,
 	'blue': #004b83,
 	'blue-light': #0063ab,
-	'research-blue': #0070A8,
-	'universal-blue': #01324B,
 	'purple': #a345c9,
 	'grey-dark1': #555,	// Formely emperor
 	'grey-dark2': #666,	// Formely dove
@@ -22,14 +20,14 @@ $context--colors: (
 	'grey-mid1': #dadada, // Formely alto
 
 	// SN Accent colours
-	'lilac':  #9d7eb8,
+	'research-purple': #785ba7,
 	'emerald': #00b8b0,
-	'orange': #f58220,
+	'orange': #c75301,
 	'lime': #b6bd04,
-	'bright-blue': #3c9cd7,	// Formely brightblue
+	'research-blue': #0070a8,
 
 	// SN Corporate colours
-	'gunmetal-blue': #183642, // Formely midnight
+	'universal-blue': #01324b,
 	'electric-blue': #486a7e,
 	'pewter-blue': #8faec1,
 	'gainsboro-blue': #cedbe0,
